# sindri-python

./: .flake8  .gitignore  .isort.cfg  LICENSE  README.md  _transform_md_to_jsx.py  build-docs.sh  local-run-docs.sh  mkdocs.yml  py_format_code.sh  pyproject.toml  setup.cfg  test.py  test2.py
.github/workflows/: build-publish-pypi.yml  ci.yml  docs.yml  generate-docs.yml  lint-check.yml  lint.yml  publish_to_pypi.yml
src/: __init__.py
src/sindri/: __init__.py  sindri.py
src/sindri_labs/: sindri.py
tests/: README.md  test_sindri.py
