[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | .mypy_cache
    | .pytest_cache
    | __pycache__
  )/
)
'''

[tool.mypy]
python_version = "3.10"

[tool.poetry]
authors = [
    "Sindri Labs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Sindri Python SDK"
homepage = "https://forge.sindri.app"
license = "MIT"
name = "sindri-labs"
readme = "README.md"
repository = "https://github.com/Sindri-Labs/sindri-python"
requires-python = ">=3.10"
urls = [
    "Issues": "https://github.com/Sindri-Labs/sindri-python/issues"
]
version = "0.0.6"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.13.0"
