[tool.black]
line-length = 100
skip-string-normalization = false
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | .mypy_cache
    | .pytest_cache
    | __pycache__
    | venv
    | env
  )/
)
'''

[tool.mypy]
python_version = "3.10"
exclude = ["venv/*", 'env/*']

[tool.poetry]
authors = [
    "Sindri Labs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Sindri Python SDK"
homepage = "https://sindri.app"
license = "MIT"
name = "sindri"
readme = "README.md"
repository = "https://github.com/Sindri-Labs/sindri-python"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.13.0"

[tool.poetry.group.dev.dependencies]
python = ">=3.8.1"
lazydocs = "^0.4.8"
mkdocs = "^1.5.3"
mkdocs-awesome-pages-plugin = "^2.9.2"
pytest = "^8.1.1"
black = "24.2.0"
flake8 = {version = "7.0.0", python = "^3.8.1"}
isort = "5.10.1"
mypy = "^1.9.0"
types-requests = "^2.31.0.20240311"
