[metadata]
name=sindri-labs
version = sindri-labs.VERSION
author = Sindri Labs, LLC
description = The Sindri Python SDK
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
]

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where=src